Fix wrap and scope css

--- a/assets/common.scss
+++ b/assets/common.scss
@@ -21,6 +21,6 @@
 
 .wrap {
     max-width: 960px;
-    padding: 60px;
+    padding: 0 60px;
     margin: auto;
 }
